# ipc-drive

./: .gitignore  Cargo.toml  LICENSE  README.md
blocks/: Cargo.toml
blocks/src/: config.rs  lib.rs
blocks/src/block/: errors.rs  metadata.rs  mod.rs  sha3.rs
blocks/src/ipc/: mod.rs
blocks/src/store/: mod.rs  op.rs
master-proc/: Cargo.toml
master-proc/src/: config.rs  main.rs  rfc-62.txt
master-proc/src/block/: metadata.rs
master-proc/src/device/: io.rs
master-proc/src/ipc/: mod.rs  util.rs
master-proc/src/store/: mod.rs  op.rs
slave-proc/: Cargo.toml
slave-proc/src/: main.rs
src/: errors.rs  io.rs  main.rs
src/contiguous/: mod.rs
