[package]
name = "ipc-drive"
version = "0.0.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["blocks", "slave-proc"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true
panic = "abort"

[dependencies]
event-listener = "5.4.1"
smol = "2.0.2"
blocks = { path = "./blocks" }
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
