[package]
name = "blocks"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
sha3 = "0.10.8"
sysinfo = "0.37.2"
uuid = { version = "1.18.1", features = ["v7"] }
tracing = "0.1"
tracing-subscriber = "0.3"
smol = "2.0.2"
async-broadcast = "0.7.2"
async-io = "2.6.0"
smol-timeout = "0.6.1"
event-listener = "5.4.1"
