[package]
name = "master-proc"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
console-subscriber = "0.4.1"
# io-uring = "0.7.9"
# libc = "0.2.176"
# libublk = "0.4.4"
# nix = "0.30.1"
sha3 = "0.10.8"
sysinfo = "0.37.2"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v7"] }
# zstd = "0.13.3"

[build]
rustflags = ["--cfg", "tokio_unstable"]
